Z-index fix to make menu go over advertisements

--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h1, h2, h3, h4 {
 }
 
 h2 {
-	color: #46c6bb;
+	color: #47cabe;
 	font-weight: 300;
 	font-family: "Oswald";
 	font-size: 1.7em;
@@ -448,7 +448,7 @@ ul#main-nav li.vendors span.icon {
 	width: 100%;
 	height: 493px;
 	border: 1px solid #9d9d9d;
-	z-index: 50;
+	z-index: 9999999;
 	position: absolute;
 	top: 114px;
 	margin-top: 12px;
